fix: add + icon for repeat add button. Also fix vertical spacing for repeats

--- a/packages/web-forms/src/assets/css/icomoon.css
+++ b/packages/web-forms/src/assets/css/icomoon.css
@@ -100,3 +100,6 @@
 .icon-error_outline:before {
 	content: '\e918';
 }
+.icon-add:before {
+  content: "\e919";
+}
